--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,13 @@ jobs:
     vmImage: 'Ubuntu-16.04'
   steps:
   - bash: scripts/docker_build.sh
-  - task: GithubRelease@0
+  - task: CopyFiles@2
+    inputs:
+      contents: 'xe303c12.zip'
+      targetFolder: $(Build.ArtifactStagingDirectory)
+  - task: GitHubRelease@0
     inputs:
       gitHubConnection: 'github'
       repositoryName: '13pgeiser/debian_stretch_XE303C12'
       action: 'create'
-      Assets: xe303c12.zip
+      assets: $(Build.ArtifactStagingDirectory)/*.zip
