--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
       targetFolder: $(Build.ArtifactStagingDirectory)
   - task: GitHubRelease@0
     inputs:
-      gitHubConnection: 'zanymuzik'
+      gitHubConnection: 'zanymuzik_azure'
       repositoryName: 'zanymuzik/debian_chromebook_XE303C12'
       action: 'create'
       assets: $(Build.ArtifactStagingDirectory)/*.zip
